fix(fe): fix input overlap on mobile and balance register grid on desktop

--- a/sorms-fe/src/index.css
+++ b/sorms-fe/src/index.css
@@ -583,7 +583,7 @@ label {
 }
 
 .search-input {
-  padding-left: 2.8rem;
+  padding-left: 2.8rem !important;
 }
 
 .gradient-primary {
